syntax = "proto3";
package cosmos.accesscontrol_x.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/accesscontrol/accesscontrol.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/accesscontrol/types";

message GenesisState {
    Params params = 1 [(gogoproto.nullable) = false];

    // mapping between every message type and its predetermined resource read/write sequence
    repeated cosmos.accesscontrol.v1beta1.MessageDependencyMapping message_dependency_mapping = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"message_dependency_mapping\""
    ];

    repeated cosmos.accesscontrol.v1beta1.WasmDependencyMapping wasm_dependency_mappings = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"wasm_dependency_mappings\""
    ];
}

message Params {
    option (gogoproto.goproto_stringer) = false;
}

